# gst-gzdec

./: meson.build  readme
src/: gstgzdec.c  gstgzdec.h
